# llm

./: .dockerignore  .env.docker  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: docker-build.yml
backend/: config.py  council.py  database.py  llm_clients.py  main.py  openrouter.py  settings.py  storage_mongo.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css  main.jsx
frontend/src/components/: Analytics.css  Analytics.jsx  ChatInterface.css  ChatInterface.jsx  Logo.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx
frontend/src/components/logos/: CyberpunkLogo.jsx  NoirLogo.jsx  RoseLogo.jsx  SaintsLogo.jsx  WitcherLogo.jsx
frontend/src/theme/: ThemeProvider.jsx  themes.js
frontend/src/themes/: cyberpunk.css  noir.css  rose.css  saints.css  witcher.css
